footer file adds

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -2,31 +2,34 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}.hero-content{
+}
+.hero-content{
     max-width: 100%;
-    height: 700px;
-    position: relative; 
-    display: flex;
-    justify-content: space-around;
+    position: relative;
+    
 
+}.hero-content-screen{
+    margin: 60px 100px;
+    display: flex;
+    max-width: 100%;
 }.hero-name{
-    top: 15%;
-    left: 10%;
-    transform: translate(15%,10%); 
+    max-width: 50%;
+    position: relative;
 }.hero-name h1{
-    font-size: 60px;
+    font-size: 40px;
     color: rgb(90, 74, 85);
     font-family: cursive;
     text-transform: uppercase;
     animation: bounce;
 
 }.hero-name span{
-    font-size: 85px;
+    font-size: 65px;
     color: rgb(32, 36, 25);
     padding:0px;
     margin-top: 10px;
     text-transform: uppercase;
     animation: slidein 3s linear 1s;
+    max-width: 50%;
 }@keyframes slidein{
     from {transform: scaleX(0);}
     to{transform: scaleX(1);}
@@ -36,56 +39,33 @@
 .hero-name p{
     font-size: 18px;
     color: grey;
-    width: 550px;
     letter-spacing: .4px;
+    max-width: 80%;
 }.hero-name button{
     width:170px;
     height: 40px;
-    border: 2px solid red;
+    border: 2px solid black;
     outline: none;
     background-color: tomato;
     color: white;
-    border-radius: 15px;
+    border-radius: 25px;
     text-transform: uppercase;
     transition: all .5s linear;
-    margin-top: 50px;
-} button:hover{
+    margin-top: 20px;
+}.hero-name button:hover{
     box-shadow: 0 2px 0 #959697;
-}.hero-img{
-    height: 500px;
-    max-width: 800px;
+    color: black;
     background-color: blueviolet;
+}.hero-content .hero-img{
+    height: 450px;
+    max-width: 100%;
 }
 
 .home{
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* HomeScreen content */
 .containers{
     display: flex;
@@ -146,46 +126,54 @@
 }
 
 
+/* Footer section */
 
-@media  (max-width:600px){
+.footer{
+    height: 100px;
+    background: black;
+    text-align: center;
+    color: blanchedalmond;
+}
+.footer-copyrights{
+    padding-top: 20px;
+}.footer-copyrights h3{
+    font-family: sans-serif;
+    margin-bottom: 10px;
+}
+
+
+@media  (max-width:625px){
     .home{
         flex-wrap: wrap;
-    }.hero-img{
-        width: auto;
-        height: auto;
+    }.hero-name{
+        max-width: 100%;
+    }
+    
+    .hero-img{
+        max-width: 100%;
+        max-height: 300px;
         display: block;
     }.hero-content{
-        display: block;
-        text-align: center;
-        align-items: center;
-
-    }.hero-img{
-        width: 100%;
-    }.hero-name{
-        top: 5%;
-        left: 0%;
-        transform: translate(5%,0%); 
-
+        margin: 20px 0;
+    }.hero-content-screen{
+        margin: 0;
+        display: block;   
+        padding: 0 20px; 
     }.hero-name h1{
-        font-size: 30px;
+        font-size: 20px;
         color: rgb(90, 74, 85);
         font-family: cursive;
         text-transform: uppercase;
         animation: bounce;
     
     }.hero-name span{
-        font-size: 35px;
+        font-size: 30px;
         color: rgb(32, 36, 25);
         padding:0px;
-        margin-top: 10px;
-        text-transform: uppercase;
-        animation: slidein 3s linear 1s;
     }@keyframes slidein{
         from {transform: scaleX(0);}
         to{transform: scaleX(1);}
     }
-    
-    
     .hero-name p{
         font-size: 18px;
         color: grey;
@@ -201,8 +189,18 @@
         border-radius: 15px;
         text-transform: uppercase;
         transition: all .5s linear;
+        padding-left: 0;
     }.hero-btn button:hover{
         transform: translateY(3px);
         box-shadow: 0 2px 0 #959697;
+    }
+}
+@media(min-width:2560px){
+    .hero-content{
+        display: flex;
+        margin: 0 500px;
+    }.home{
+        flex: wrap;
+        margin: 0 500px;
     }
 }
